# Grocery-App

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/api/: dependencies.py  router.py
app/api/routers/: auth.py  orders.py  products.py  task.py  uom.py  user.py
app/api/schemas/: order.py  product.py  task.py  uom.py  user.py
app/core/: security.py
app/database/: models.py  redis.py  session.py
app/databases/: models.py
app/services/: base.py  order.py  product.py  task.py  uom.py  user.py
auth/: config.py  main.py
auth/api/: dependencies.py  router.py
auth/api/routers/: user.py
auth/api/schemas/: user.py
auth/databases/: models.py  session.py
auth/services/: user.py
backend/: README.md  database.py  grocery_store.db  main.py  models.py
backend/daos/: __init__.py  orders_dao.py  products_dao.py  uom_dao.py
practice/: config.py  main.py  schemas.py  test.py  utils.py
practice/api/: dependencies.py  router.py
practice/api/routers/: delivery_partner.py  seller.py  shipment.py
practice/api/schemas/: seller.py  shipment.py
practice/core/: security.py
practice/databases/: models.py  redis.py  session.py  session.py_sample_code
practice/migrations/: env.py  script.py.mako
practice/migrations/versions/: 21a583a6279c_added_address.py  50ab784092ae_added_delivery_partner.py  d97864dc7433_init.py
practice/services/: delivery_partner.py  seller.py  shipment.py  user.py
