[project]
name = "grocery-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
]
